--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     <div style="max-width: 50%; margin: 0 auto;"> <!-- Nuevo div para centrar y limitar el ancho -->
-        <h1>Simulador de Captura de WhatsApp</h1>
+        <h1>Capture WhatsApp</h1>
         <p style="color: red; font-weight: bold;">Advertencia: Este simulador es solo para fines educativos y no debe usarse para actividades ilegales.</p>
         <form id="captureForm">
             <label for="phoneNumber">Número de WhatsApp:</label>
